<resources>
    <string name="app_name">CurrencyConverterMinFin</string>
    <string name="usd_text">USD</string>
    <string name="eur_text">EUR</string>
    <string name="uan_text">UAN</string>
    <string name="null_text">00</string>
    <string name="button_text">Go</string>
    <string name="ask_text">Покупка</string>
    <string name="bid_text">Продажа</string>

    <string-array name="currency">
        <item>USD</item>
        <item>EUR</item>
        <item>UAN</item>
    </string-array>
</resources>
