<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="griffits.fvi.at.ua.currencyconverterminfin.MainActivity">

    <EditText
        android:id="@+id/enter_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="enter number"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="93dp" />


    <Button
        android:id="@+id/button_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:onClick="btnConverter"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle=""
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignBottom="@+id/spinner_currency"
        android:layout_toRightOf="@+id/spinner_currency"
        android:layout_toEndOf="@+id/spinner_currency" />

    <TextView
        android:id="@+id/usd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:textSize="20sp"
        android:textColor="@color/colorGreen"
        android:text="@string/null_text"
        android:layout_below="@+id/button_converter"
        android:layout_alignLeft="@+id/enter_number"
        android:layout_alignStart="@+id/enter_number"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/eur_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usd_tv"
        android:layout_alignStart="@+id/usd_tv"
        android:layout_below="@+id/usd_tv"
        android:layout_marginTop="34dp"
        android:text="@string/null_text"
        android:textSize="20sp"
        android:textColor="@color/colorOrange"/>

    <TextView
        android:id="@+id/frn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eur_tv"
        android:layout_alignStart="@+id/eur_tv"
        android:layout_below="@+id/eur_tv"
        android:layout_marginTop="35dp"
        android:text="@string/null_text"
        android:textSize="20sp"
        android:textColor="@color/colorYellow"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:layout_alignBaseline="@+id/usd_tv"
        android:layout_alignBottom="@+id/usd_tv"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorOrange"
        android:layout_alignBaseline="@+id/eur_tv"
        android:layout_alignBottom="@+id/eur_tv"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/frn_tv"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:text="@string/uan_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorYellow"/>

    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/enter_number"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"></Spinner>


</RelativeLayout>
